# seetaface2_demo

./: README.md
android/seetaface2AS/app/: build.gradle
android/seetaface2AS/app/src/androidTest/java/com/seetaface2as/: ExampleInstrumentedTest.java
android/seetaface2AS/app/src/main/: AndroidManifest.xml
android/seetaface2AS/app/src/main/java/com/seetaface2as/: CompareActivity.java  DetectionActivity.java  MainActivity.java
android/seetaface2AS/app/src/main/res/drawable/: item_selector.xml
android/seetaface2AS/app/src/main/res/layout/: activity_compare.xml  activity_detection.xml  activity_main.xml
android/seetaface2AS/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/seetaface2AS/app/src/test/java/com/seetaface2as/: ExampleUnitTest.java
linux/src/: main.cpp
linux/tools/: linuxBuild.sh
win/: CMakeLists.txt
